@@ -13,15 +13,23 @@
 					
 					<?php get_search_form(); ?>
 
-					<?php the_widget( 'WP_Widget_Recent_Posts' ); ?>
+					<?php // Set Widget arguments
+					$args = array(
+						'before_widget' => '<section class="%s">',
+						'after_widget' => '</section>',
+						'before_title' => '<h3>',
+						'after_title' => '</h3>',
+					); ?>
+						
+					<?php the_widget( 'WP_Widget_Recent_Posts', '', $args ); ?>
 
-					<?php the_widget( 'WP_Widget_Archives', 'dropdown=1' ); ?>
+					<?php the_widget( 'WP_Widget_Archives', 'dropdown=1', $args ); ?>
 					
-					<?php the_widget( 'WP_Widget_Categories', 'dropdown=1' ); ?>
+					<?php the_widget( 'WP_Widget_Categories', 'dropdown=1', $args ); ?>
 
-					<?php the_widget( 'WP_Widget_Tag_Cloud' ); ?>
+					<?php the_widget( 'WP_Widget_Tag_Cloud', '', $args ); ?>
 					
-					<?php the_widget( 'WP_Widget_Pages' ); ?>
+					<?php the_widget( 'WP_Widget_Pages', '', $args ); ?>
 					
 				</div>
 				
