@@ -27,4 +27,4 @@
 		<?php get_sidebar(); ?>
 	</div>
 	
-<?php get_footer(); ?>	
+<?php get_footer(); ?>
