@@ -20,4 +20,4 @@
 		
 	</div>
 	
-<?php get_footer(); ?>	
+<?php get_footer(); ?>
