@@ -19,4 +19,4 @@
 		<?php get_sidebar(); ?>
 	</div>
 	
-<?php get_footer(); ?>	
+<?php get_footer(); ?>
