@@ -32,4 +32,4 @@ Template Name: Fullwidth Template
 
 	</div>
 	
-<?php get_footer(); ?>	
+<?php get_footer(); ?>
