@@ -6,6 +6,8 @@ Version 1.2.9
 -----------------------------------
 [added] Post Slider page template
 [changed] all h2 post and page titles to h1 for better SEO
+[removed] empty spaces at the end of template files
+[fixed] styling of 404 template
 
 Version 1.2.8
 -----------------------------------
